fix: refresh token was sent in response feat: whoAmI endpoint
