# router/v1/user-router.js
@@ -4,5 +4,6 @@ const router = new Router();
 const authMiddleware = require('../../middlewares/auth-middleware');
 
 router.get('/users', authMiddleware, userController.getUsers);
+router.get('/whoAmI', authMiddleware, userController.whoAmI);
 
 module.exports = router;
